--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ padding : 5px;
 
 
 
+
 #service {
 float : center;
 width : contain;
@@ -123,11 +124,7 @@ display : block;
 font-size : 150%;
 margin : 10px;
 }
-#service img {
-height : 30px;
-width : auto;
-padding : 0 10px 0 0;
-}
+
 
 
 
@@ -176,11 +173,11 @@ text-align : left;
 clear : both;
 float : center;
 max-width : 800px;
-height : auto;
+height : 30px;
 margin : 5% auto 0 auto;
-padding : 3% 0;
+padding : 3% 0 30px 0;
 background : url("artwork/background-footer.png") repeat;
-background-size : 10%;
+background-size : 20%;
 background-position : 0% 50%;
 }
 #footer table {
@@ -266,6 +263,12 @@ float : center;
 max-width : 600px;
 height : auto;
 margin : 0 auto;
+}
+
+.bullet-paw {
+height : 30px;
+width : auto;
+padding : 0 10px 0 0;
 }
 
 .wichtig-img {
