--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@ margin : 0 auto;
 .bullet-paw {
 height : 30px;
 width : auto;
-padding : 0 10px 0 0;
+padding : 10px 10px 10px 0;
 }
 
 .wichtig-img {
