--- a/style.css
+++ b/style.css
@@ -127,8 +127,6 @@ margin : 10px;
 
 
 
-
-
 #preise {
 width : auto;
 margin : 50px auto;
@@ -157,6 +155,23 @@ text-align : center;
 #preise .firstcolumn {
 text-align : left;
 }
+
+#fotogalerie li {
+display : inline-block;
+float : left;
+width : 300px;
+height : 300px;
+margin : 20px;
+text-align : center;
+vertical-align : center;
+
+}
+#fotogalerie img {
+border : 3px solid #7CB9E8;
+outline : 3px solid white;
+border-radius : 10px;
+}
+
 
 
 
@@ -273,6 +288,15 @@ padding : 10px 10px 10px 0;
 
 .wichtig-img {
 max-width : 40%;
+}
+
+.fotogalerie-horiz {
+width : 300px;
+height : auto;
+}
+.fotogalerie-vert {
+height : 300px;
+width : auto;
 }
 
 .
