--- a/style.css
+++ b/style.css
@@ -227,8 +227,8 @@ color : black;
 font-weight : 900;
 }
 h3 {
-margin : 0;
-padding : 5 px 20px;
+margin : 0 0 0 15px;
+padding : 5px;
 font-size : 200%;
 letter-spacing : 5px;
 color : black;
