--- a/style.css
+++ b/style.css
@@ -213,7 +213,8 @@ background-color : inherit;
 }
 h1 {
 margin : 0;
-padding : 20px;
+padding : 30px;
+line-height : 1.3em;
 font-size : 200%;
 letter-spacing : 5px;
 color : black;
