--- a/style.css
+++ b/style.css
@@ -100,27 +100,24 @@ padding : 5%;
 line-height : 1.8em;
 }
 
-#lokal-img {
+
+}
+#lokal-band {
+display : block;
 width : 100%;
-height : 380px;
-margin-bottom : 50px;
-background : #eee url("lokal.png");
-background-size : 100% auto;
-background-repeat : no-repeat;
+margin-left : auto;
+margin-right : auto;
 border-top : 3px solid #7CB9E8;
-outline-top : 1px solid white;
 border-bottom : 3px solid #7CB9E8;
-outline-bottom : 1px solid white;
+outline : 3px solid white;
 }
-#lokal-img table {
-width : 30%;
-height : 380px;
-}
-#lokal-img td {
+#lokal-band td {
 color : black;
 font-size : 100%;
+background : white;
+text-align : center;
 }
-#lokal-img button {
+#lokal-band button {
 display : block;
 padding : 5px 10px;
 margin : 10px;
@@ -132,11 +129,12 @@ outline : 1px solid white;
 color : black;
 hover : pointer;
 }
-#lokal-img a {
+#lokal-band a {
 text-decoration : none;
 color : black;
 font-size : 80%;
 }
+
 
 
 #wilkommen {
@@ -167,25 +165,22 @@ color : black;
 font-size : 20px;
 }
 
-#visit-karte {
-width : 100%;
-height : 380px;
-margin-bottom : 50px;
-background : url("visit-karte.png");
-background-size : 50% auto;
-background-repeat : no-repeat;
-border-top : 3px solid #7CB9E8;
-outline-top : 1px solid white;
-border-bottom : 3px solid #7CB9E8;
-outline-bottom : 1px solid white;
-}
 #visit-karte table {
-width : 80%;
-height : 380px;
+display : block;
+width : 60%;
+height : auto;
+margin-left : auto;
+margin-right : auto;
+background-color : white;
+border-top : 3px solid #7CB9E8;
+border-bottom : 3px solid #7CB9E8;
+outline : 3px solid white;
 }
 #visit-karte td {
 color : black;
 font-size : 100%;
+background : white;
+text-align : center;
 }
 
 
