--- a/style.css
+++ b/style.css
@@ -100,6 +100,36 @@ padding : 5%;
 line-height : 1.8em;
 }
 
+#features {
+display : block;
+width : 85%;
+=margin-left : auto;
+margin-right : auto;
+}
+#features li {
+display : inline-block;
+height : 200px;
+width : 200px;
+margin : 20px;
+text-align : center;
+vertical-align : center;
+background-color : white;
+border : 3px solid #7CB9E8;
+outline : 3px solid white;
+border-radius : 100px;
+}
+#features img {
+width : 40px;
+width : 40px;
+margin : 0;
+}
+#features p {
+padding : 30px 0 0 0;
+font-size : 18px;
+font-weight : bold;
+background : none;
+}
+
 
 }
 #lokal-band {
@@ -148,6 +178,7 @@ margin-right : auto;
 width : 100%;
 height : auto;
 margin : 20px auto;
+padding-top : 10%;
 }
 #kunden-table td {
 width : 25%;
@@ -161,11 +192,14 @@ outline : 3px solid white;
 border-radius : 10px;
 }
 #kunden-table a {
+display : block;
 color : black;
-font-size : 20px;
+font-size : 150%;
+font-weight : bold;
+padding : 20px;
 }
 
-#visit-karte table {
+/*#visit-karte table {
 display : block;
 width : 60%;
 height : auto;
@@ -181,8 +215,7 @@ color : black;
 font-size : 100%;
 background : white;
 text-align : center;
-}
-
+}*/
 
 
 
