--- a/style.css
+++ b/style.css
@@ -199,6 +199,59 @@ font-weight : bold;
 padding : 20px;
 }
 
+
+#services {
+display : block;
+margin : 50px auto;
+width : 90%;
+clear : both;
+}
+#services li {
+display : inline-block;
+float : left;
+width : 220px;
+height : 180px;
+margin : 20px;
+background-color : white;
+border : 3px solid #7CB9E8;
+outline : 1px solid white;
+border-radius : 5px;
+padding : 5px;
+text-align : center;
+vertical-align : center;
+}
+#services img {
+width : 80px;
+height : 80px;
+margin : 0;
+}
+#services p {
+padding : 10px;
+font-size : 18px;
+font-weight : bold;
+background : none;
+}
+
+#services-note {
+display : block;
+width : 70%;
+margin : 50px auto;
+clear : both;
+}
+#services-note td {
+font-size : 18px;
+font-weight : bold;
+color : black;
+vertical-align : center;
+}
+#services-note img {
+display : block;
+margin : 10px;
+}
+
+
+
+
 /*#visit-karte table {
 display : block;
 width : 60%;
@@ -231,25 +284,6 @@ border-radius : 5px;
 padding : 5px;
 }
 
-
-
-
-#service {
-float : center;
-width : contain;
-max-width : 90%
-margin : 20px auto 20px auto;
-background : #F0F8FF;
-border : 3px solid #7CB9E8;
-outline : 1px solid white;
-border-radius : 5px;
-padding : 5px;
-}
-#service li {
-display : block;
-font-size : 150%;
-margin : 10px;
-}
 
 
 
