--- a/style.css
+++ b/style.css
@@ -435,6 +435,9 @@ letter-spacing : 5px;
 color : black;
 background : inherit;
 }
+.email {
+font-size : 120%;
+}
 h4 {
 margin : 10px 0;
 padding : 0 0 0px 0px;
